# mosaic

./: .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.cache/clangd/index/: BgrIconPiece.cpp.257C3DC32560B835.idx  BgrIconPiece.hpp.C1D4AD9305867D47.idx  BgrIconPieceTest.cpp.2057414B59D78F7C.idx  ColorPiece.cpp.F22F324CA416948A.idx  ColorPiece.hpp.0F50F0FCBB207FAD.idx  Example1.cpp.5F07B26FFA18BC30.idx  Example2.cpp.1BABABA08F9BE92B.idx  FileLogger.cpp.5DC77C5801737CF6.idx  FileLogger.hpp.CD34C56104FE185C.idx  IconPiece.cpp.79F6359E777E80BA.idx  IconPiece.hpp.88952A152E915427.idx  IconPieceTest.cpp.2FDB2C0273EED67E.idx  Individual.cpp.31C6E8D8F8458982.idx  Individual.hpp.CC03C6E0668852BE.idx  IndividualGeneration.cpp.D6AF9E8A3CD4934D.idx  IndividualGeneration.hpp.BE2741661D83E5FD.idx  IndividualTest.cpp.BE5FBB05BD1A8DDB.idx  LabIconClusteringPiece.cpp.521D26758476C459.idx  LabIconClusteringPiece.hpp.3B2FD2C7CF688E03.idx  LabIconPiece.cpp.E2509D4223B5F84A.idx  LabIconPiece.hpp.96501E63703C53E7.idx  LabPiece.cpp.66D0D4B6EE5F66DC.idx  LabPiece.hpp.FCCA84A3A6278321.idx  Page.cpp.020EB20C3CCFE89E.idx  Page.hpp.53D6955A6DBADA25.idx  PageEvaluation.cpp.169A5CF593711C50.idx  PageEvaluation.hpp.017563A87EAC6E23.idx  PageEvaluationTest.cpp.D2CEA315311993AB.idx  Piece.hpp.1F8DBBBB85651E8D.idx  PieceTest.cpp.BD1ED2F6E6068D45.idx  PopulationUtil.cpp.C4648A5138A04BC3.idx  PopulationUtil.hpp.1C4C7DC0B62174AC.idx  gmock-actions.h.1944423DCF7AC140.idx  gmock-all.cc.508B08E6B06300A7.idx  gmock-cardinalities.cc.FBE0B7FF09E653EA.idx  gmock-cardinalities.h.2944530437D07FAF.idx  gmock-function-mocker.h.1B7C800206E287E7.idx  gmock-generated-actions.h.1D94F0C734FA6566.idx  gmock-internal-utils.cc.DB36AE84820D829E.idx  gmock-internal-utils.h.ACCA58BD771DBADD.idx  (+49 more)
Arrange/: CMakeLists.txt
Arrange/examples/: CMakeLists.txt  Example1.cpp  Example2.cpp
Arrange/src/: CMakeLists.txt  Individual.cpp  Individual.h  IndividualGeneration.cpp  IndividualGeneration.h  LabPiece.h  Page.cpp  Page.h  PageEvaluation.cpp  PageEvaluation.h  Piece.h  PopulationUtil.cpp
Arrange/src/pieces/: BgrIconPiece.cpp  BgrIconPiece.h  ColorPiece.cpp  ColorPiece.h  IconPiece.cpp  IconPiece.h  LabIconClusteringPiece.cpp  LabIconClusteringPiece.h  LabIconPiece.cpp  LabIconPiece.h  LabPiece.cpp  LabPiece.h  Piece.cpp  Piece.h
Arrange/test/: CMakeLists.txt  IconPieceTest.cpp  IndividualTest.cpp  PageEvaluationTest.cpp  PieceTest.cpp
Arrange/test/pieces/: BgrIconPieceTest.cpp  IconPieceTest.cpp  PieceTest.cpp
Extract/src/: CMakeLists.txt  IconCenters.h  IconIO.cpp  IconIO.h  config.cpp  config.h  extract.cpp
doc/: JSON_EXPORT.md  individual_export_schema.json
examples/: CMakeLists.txt  Example1.cpp  Example2.cpp  Example3.cpp  Example3_JsonExport.cpp  TestJsonExport.cpp
include/Mosaic/: FileLogger.hpp  HallOfFame.hpp  Individual.hpp  IndividualGeneration.hpp  JsonExport.hpp  Page.hpp  PageEvaluation.hpp  PopulationUtil.hpp
include/Mosaic/piece/: BgrIconPiece.hpp  ColorPiece.hpp  IconPiece.hpp  LabIconClusteringPiece.hpp  LabIconPiece.hpp  LabPiece.hpp  Piece.hpp
src/: CMakeLists.txt  Evaluator.cpp  Evaluator.h  FileLogger.cpp  FileLogger.h  HallOfFame.cpp  Individual.cpp  Individual.h  IndividualGeneration.cpp  IndividualGeneration.h  JsonExport.cpp  LabPiece.cpp  LabPiece.h  Mosaic.cpp  Page.cpp  Page.h  PageEvaluation.cpp  PageEvaluation.h  PageTools.cpp  PageTools.h  Piece.cpp  Piece.h  PopulationUtil.cpp  PopulationUtil.h
src/piece/: BgrIconPiece.cpp  ColorPiece.cpp  IconPiece.cpp  LabIconClusteringPiece.cpp  LabIconPiece.cpp  LabPiece.cpp
test/: CMakeLists.txt  EvaluatorTest.cpp  IndividialTest.cpp  IndividualTest.cpp  PageEvaluationTest.cpp  PageTest.cpp  PageToolsTest.cpp  PieceTest.cpp
tests/: CMakeLists.txt  IndividualTest.cpp  PageEvaluationTest.cpp  PopulationUtilFilterByAgeTest.cpp  PopulationUtilTest.cpp
tests/piece/: BgrIconPieceTest.cpp  IconPieceTest.cpp  LabIconPieceTest.cpp  PieceTest.cpp
visualization/: mosaic_analysis.ipynb  requirements.txt
